--- a/Assignment03/Assignment03.css
+++ b/Assignment03/Assignment03.css
@@ -1,1 +1,17 @@
 /* CSS declarations go here */
+header {
+	margin-bottom:50px;
+	text-align: center;
+}
+
+header h1 {
+	font-family:'Open Sans';
+}
+
+header .contributors {
+
+}
+
+.mainActions {
+	margin-bottom:10px;
+}
